Generalization, testing/fixes, and simplification